# vpn_ui

./: .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile1  LICENSE  Makefile  alembic.ini  config.json  config.py  docker-compose.override.yml  docker-compose.yml  docker-compose1.yml  main.py  pyproject.toml  requirements.txt  run.py
3x-ui/: __init__.py
_3x_ui_/: __init__.py  __main__.py  handlers.py  models.py  repository.py  service.py  session_manager.py
__test/: __main__.py  add_payload.json  add_response.json  db.py  json_dump.py  test.json  test_user_schema.py  vless_create_response.json
__test/create_vpn/: vless_payload.json  vless_response.json
__test/json/: add_user_to_vless_reality_response.json  list.json  vless_reality_response.json
app/: create_db.py  crud.py  database.py  db.py  enums.py  main.py  models.py
app/bot/: __init__.py  __main__.py  commands.py  consumer.py  container.py  di_implementation.py  handlers.py  main.py
app/database/: database.py
app/site/: config.json  config.py  main.py  token.py
back/: broker.py  config.py  get_auth.py  main.py  token.py
back/api/: __init__.py  auth.py  feedback.py  server.py  ticket.py  transaction.py  user.py
back/schemas/: server.py  server_scheme.py  user.py  (+2 more)
bot/: __init__.py  __main__.py  commands.py  consumer.py  di_container.py  di_implementation.py  handlers.py  main.py
database/: database.py  main.py  redis.py
front/: nuxt.config.ts  package-lock.json  package.json
schedule/: server.py  user.py
services/: proxy_interface.py  proxy_models.py
site/: broker.py  main.py
(+289 files in other folders)
