[tool.poetry]
name = "vpn-ui-back"
version = "0.1.0"
description = ""
authors = ["w1vern <bndvvl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.2.0"
fastapi = "^0.115.4"
fastapi-controllers = "^0.3.0"
sqlalchemy = "^2.0.36"
pyjwt = "^2.9.0"
faststream = {extras = ["rabbit"], version = "^0.5.28"}
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
pytelegrambotapi = "^4.23.0"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
